Reformat all of the things